--- a/package.json
+++ b/package.json
@@ -1,29 +1,32 @@
 {
-    "name": "ForgeCMS",
-    "version": "0.0.1",
-    "description": "A sorta simple, CMS made for personal use and practice. We'll see.",
-    "author": "Gustavo Suarez <suarez.gus42@gmail.com> (http://mythril.co)",
-    "scripts": {
-        "start": "node server.js"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/aerze/forge"
-    },
-    "bugs": {
-        "url": "https://github.com/aerze/forge/issues"
-    },
-    "keywords": [
-        "ForgeCMS",
-        "CMS",
-        "Forge",
-        "Mythril"
-    ],
-    "dependencies": {
-        "express": "^4.8.x",
-        "body-parser": "^1.7.x",
-        "cookie-parser": "^1.3.x"
-    },
-    "private": true,
-    "licence": "Apache-2.0"
+  "name": "ForgeCMS",
+  "version": "0.0.1",
+  "description": "A sorta simple, CMS made for personal use and practice. We'll see.",
+  "author": "Gustavo Suarez <suarez.gus42@gmail.com> (http://mythril.co)",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/aerze/forge"
+  },
+  "bugs": {
+    "url": "https://github.com/aerze/forge/issues"
+  },
+  "keywords": [
+    "ForgeCMS",
+    "CMS",
+    "Forge",
+    "Mythril"
+  ],
+  "dependencies": {
+    "body-parser": "^1.7.x",
+    "browserify-middleware": "^5.0.2",
+    "cookie-parser": "^1.3.x",
+    "express": "^4.8.x",
+    "morgan": "^1.5.2",
+    "page": "^1.6.2"
+  },
+  "private": true,
+  "licence": "Apache-2.0"
 }
